# drf_exam

./: .gitignore  Makefile  TODO  pyproject.toml
apps/: admin.py  filters.py  serializers.py  urls.py  views.py
apps/migrations/: 0001_initial.py  0002_alter_user_managers.py
apps/models/: __init__.py  orders.py  products.py  shops.py  users.py
root/: settings.py  urls.py
